--- a/index.html
+++ b/index.html
@@ -3,48 +3,51 @@
 	<head>
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
 		<title>Emma's profile</title>
-		<link rel="stylesheet" type="text/css" href="style.css">	
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 <body>
 
 	<div class="countainer">
-	
+
 	<div class="card-grey">
-		
+
 		<h1> Welcome to my website !<h1>
 
 		<img src="images/IMG_2897.jpg" alt="Emma" height="450" width="330">
 
 
 	</div>
-	
+
 	<div>
-		<a href="https://travelherdotblog.wordpress.com" class="btn-white" target="_blanck" >  Emma's Website</a> 
+		<a href="https://travelherdotblog.wordpress.com" class="btn-white" target="_blanck" >  Emma's Website</a>
 	</div>
-	
+
 	<div class="card-grey">
 		<h2>Qui suis-je ?</h2>
 
 
-		<p> Je suis originaire du <strong>Nord</strong>. J'ai intégré l'IESEG de Paris en première année de master en Maketing Digital et Innovation. Je suis passionnée par la mode c'est pour cela que je vais vous partager mes découvertes, mes visites et mes bons plans à faire dans la capitale de la mode.</p>
-		
-	</div>
-	
-		<div class="card-grey">
-		
-		<h2> Fashion </h2>
-			<p> 
-			<ul>
-				<li>Le <strong>Musée Yves Saint Laurent</strong> Paris expose l’œuvre du couturier dans le lieu historique de son ancienne maison de couture, à travers un parcours rétrospectif et des expositions temporaires thématiques présentées successivement.</li>
-			</ul>
-			<ul>
-				<li>Le Musée des Arts Décoratifs célèbre l’anniversaire marquant les 70 ans de la création de <strong>la maison Christian Dior</strong>. Cette exposition, riche et dense, invite le visiteur à découvrir l’univers de son fondateur et des couturiers de renom qui lui ont succédé : Yves Saint Laurent, Marc Bohan, Gianfranco Ferré, John Galliano, Raf Simons et tout récemment Maria Grazia Chiuri. Émotions, histoires vécues, affinités, inspirations, créations et filiations relient cette sélection de plus de 300 robes de haute couture conçues de 1947 à nos jours.</li>
-			</ul>
 
-			<ul>
-				<li> <strong> Givenchy</strong>, qui était au départ une maison de haute couture créée par le grand couturier français Hubert de Givenchy en 1952, est devenue une marque de luxe : couture, parfums, prêt-à-porter, maroquinerie, bijoux.</li>
-			</ul>
-			<p>
+		<p> Je suis originaire du <strong>Nord</strong>. J'ai intégré l'IESEG de Paris en première année de master en Maketing Digital et Innovation. Je suis passionnée par la mode c'est pour cela que je vais vous partager mes découvertes, mes visites et mes bons plans à faire dans la capitale de la mode.</p>
+
+	</div>
+
+
+		<div class="card-grey">
+
+		<h2> Fashion </h2>
+			<p>Le <strong>Musée Yves Saint Laurent</strong> Paris expose l’œuvre du couturier dans le lieu historique de son ancienne maison de couture, à travers un parcours rétrospectif et des expositions temporaires thématiques présentées successivement.
+
+
+
+			Le Musée des Arts Décoratifs célèbre l’anniversaire marquant les 70 ans de la création de <strong>la maison Christian Dior</strong>. Cette exposition, riche et dense, invite le visiteur à découvrir l’univers de son fondateur et des couturiers de renom qui lui ont succédé : Yves Saint Laurent, Marc Bohan, Gianfranco Ferré, John Galliano, Raf Simons et tout récemment Maria Grazia Chiuri. Émotions, histoires vécues, affinités, inspirations, créations et filiations relient cette sélection de plus de 300 robes de haute couture conçues de 1947 à nos jours.
+
+
+
+		 	<strong> Givenchy</strong>, qui était au départ une maison de haute couture créée par le grand couturier français Hubert de Givenchy en 1952, est devenue une marque de luxe : couture, parfums, prêt-à-porter, maroquinerie, bijoux.
+
+		 	Les 9 et 10 novembre 2018, <strong>le Vogue Fashion Festival</strong>, en partenariat avec Swarovski, conviait professionnels et amoureux de la mode, pendant deux jours à Paris, pour faire le point sur les nouveaux enjeux de la mode et s’immerger dans le monde des acteurs de la création. Masterclass pratiques, conférences interactives, immersion en backstage... Découvrez le meilleur du Vogue Fashion Festival en vidéo.
+
+			</p>
 
 			<video controls "width="500" height="300">
       	<source src="les-journees-particulieres-lvmh-2016-best-of.mp4" type="mp4">
@@ -52,11 +55,12 @@
 
 	</div>
 
+
 	<div class="card-grey">
-		
-		<h2> Follow me 
+
+		<h2> Follow me
 			<ul class="list-inline">
-				
+
 				<ul>
 					<li><a href="https://www.facebook.com/emma.codevelle.3" target="_blanck" class="fab fa-facebook-f" > </a> </li>
 				</ul>
@@ -66,13 +70,13 @@
 				<ul>
 					<li><a href="https://www.instagram.com/emmacdv/" target="_blanck" class="fab fa-instagram"> </a></li>
 				</ul>
-			
+
 			</ul>
-			
+
 		</h2>
 
 
-	</div>	
+	</div>
 
 
 </div>
