--- a/index.html
+++ b/index.html
@@ -37,13 +37,12 @@
 
 			<p>Le <strong>Musée Yves Saint Laurent</strong> Paris expose l’œuvre du couturier dans le lieu historique de son ancienne maison de couture, à travers un parcours rétrospectif et des expositions temporaires thématiques présentées successivement.</p>
 
-			<ul>
-				<li>Le Musée des Arts Décoratifs célèbre l’anniversaire marquant les 70 ans de la création de <strong>la maison Christian Dior</strong>. Cette exposition, riche et dense, invite le visiteur à découvrir l’univers de son fondateur et des couturiers de renom qui lui ont succédé : Yves Saint Laurent, Marc Bohan, Gianfranco Ferré, John Galliano, Raf Simons et tout récemment Maria Grazia Chiuri. Émotions, histoires vécues, affinités, inspirations, créations et filiations relient cette sélection de plus de 300 robes de haute couture conçues de 1947 à nos jours.</li>
-			</ul>
 
-			<ul>
-				<li> <strong> Givenchy</strong>, qui était au départ une maison de haute couture créée par le grand couturier français Hubert de Givenchy en 1952, est devenue une marque de luxe : couture, parfums, prêt-à-porter, maroquinerie, bijoux.</li>
-			</ul>
+			<p>Le Musée des Arts Décoratifs célèbre l’anniversaire marquant les 70 ans de la création de <strong>la maison Christian Dior</strong>. Cette exposition, riche et dense, invite le visiteur à découvrir l’univers de son fondateur et des couturiers de renom qui lui ont succédé : Yves Saint Laurent, Marc Bohan, Gianfranco Ferré, John Galliano, Raf Simons et tout récemment Maria Grazia Chiuri. Émotions, histoires vécues, affinités, inspirations, créations et filiations relient cette sélection de plus de 300 robes de haute couture conçues de 1947 à nos jours.</p>
+
+
+			<p></p> <strong> Givenchy</strong>, qui était au départ une maison de haute couture créée par le grand couturier français Hubert de Givenchy en 1952, est devenue une marque de luxe : couture, parfums, prêt-à-porter, maroquinerie, bijoux.</p>
+
 			<p>
 
 			<video controls "width="500" height="300">
