--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 			<p>Le Musée des Arts Décoratifs célèbre l’anniversaire marquant les 70 ans de la création de <strong>la maison Christian Dior</strong>. Cette exposition, riche et dense, invite le visiteur à découvrir l’univers de son fondateur et des couturiers de renom qui lui ont succédé : Yves Saint Laurent, Marc Bohan, Gianfranco Ferré, John Galliano, Raf Simons et tout récemment Maria Grazia Chiuri. Émotions, histoires vécues, affinités, inspirations, créations et filiations relient cette sélection de plus de 300 robes de haute couture conçues de 1947 à nos jours.</p>
 
 
-			<p></p> <strong> Givenchy</strong>, qui était au départ une maison de haute couture créée par le grand couturier français Hubert de Givenchy en 1952, est devenue une marque de luxe : couture, parfums, prêt-à-porter, maroquinerie, bijoux.</p>
+			<p> <strong> Givenchy</strong>, qui était au départ une maison de haute couture créée par le grand couturier français Hubert de Givenchy en 1952, est devenue une marque de luxe : couture, parfums, prêt-à-porter, maroquinerie, bijoux.</p>
+
+			<p>Les 9 et 10 novembre 2018, <strong>le Vogue Fashion Festival</strong>, en partenariat avec Swarovski, conviait professionnels et amoureux de la mode, pendant deux jours à Paris, pour faire le point sur les nouveaux enjeux de la mode et s’immerger dans le monde des acteurs de la création. Masterclass pratiques, conférences interactives, immersion en backstage... Découvrez le meilleur du Vogue Fashion Festival en vidéo.</p>
 
 			<p>
 
