--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</div>
 
 	<div>
-		<a href="https://travelherdotblog.wordpress.com" class="btn-white" target="_blanck" >  Emma's Website</a>
+		<a href="https://emmacdv.github.io/Eshop/#newcollection-section" class="btn-white" target="_blanck" >  Emma's Website</a>
 	</div>
 
 	<div class="card-grey">
@@ -48,7 +48,7 @@
 			<p>
 
 			<video controls "width="500" height="300">
-      	<source src="les-journees-particulieres-lvmh-2016-best-of.mp4" type="mp4">
+      	<source src="video/les-journees-particulieres-lvmh-2016-best-of.mp4" type="mp4">
       </video>
 
 	</div>
@@ -63,7 +63,7 @@
 				</ul>
 				<ul>
 					<li><a href="https://www.linkedin.com/in/emma-codevelle/" target="_blanck" class="fab fa-linkedin-in" > </a></li>
-				</ul>
+				</ul>s
 				<ul>
 					<li><a href="https://www.instagram.com/emmacdv/" target="_blanck" class="fab fa-instagram"> </a></li>
 				</ul>
